-> Services y peticiones adaptadas a los cambios en el BackEnd -> Añadida una pantalla para modificar la configuración de la App (Preferences). Ahora es posible elegir el idioma de la App o bien que se siga adoptando el idioma del sistema Android. -> Añadido Fragment para abrir un ImageView en pantalla completa (se usará principalmente para poder ver en mayor tamaño las fotos de perfil de los distintos usuarios del juego). -> Se han añadido más comprobaciones en local en el Fragment ChangeEmailFragment (cuando intentamos cambiar el Email asociado a nuestra cuenta). -> Nuevo Dashboard más bonito y estilizado. -> Pantalla DevelopersFragment rediseñada: las fotos de los distintos desarrolladores ahora conservan su relación de aspecto, y además ahora se incluye el nomnbre de cada uno al pie de cada foto.

--- a/app/src/main/res/layout/fragment_forgotten_password.xml
+++ b/app/src/main/res/layout/fragment_forgotten_password.xml
@@ -85,6 +85,7 @@
         android:id="@+id/tvForgottenPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="@string/forgotten_password_string"
         android:textColor="@android:color/background_dark"
         android:textSize="30sp"
