--- a/app/src/main/res/layout/fragment_developers.xml
+++ b/app/src/main/res/layout/fragment_developers.xml
@@ -9,110 +9,161 @@
 
 
     <LinearLayout
-        android:id="@+id/linearLayout"
-
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="100dp"
+        android:id="@+id/linearLayout4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/ivSumaya"
+            android:layout_width="66dp"
+            android:layout_height="82dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:background="@drawable/sumy" />
+
+        <TextView
+            android:id="@+id/tvSumaya"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:foregroundGravity="center_vertical|center|center_horizontal"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:lines="2"
+            android:text="@string/sumaya_string"
+            android:textColor="@android:color/background_dark"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/ivSumaya"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal|center_vertical"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:background="@drawable/sumy"
-                android:scaleType="centerInside" />
+        <ImageView
+            android:id="@+id/ivMeritxell"
+            android:layout_width="66dp"
+            android:layout_height="82dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:adjustViewBounds="true"
+            android:background="@drawable/meri"
+            android:scaleType="centerInside" />
 
-            <ImageView
-                android:id="@+id/ivEric"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal|center_vertical"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="false"
-                android:scaleType="centerInside"
-                tools:src="@tools:sample/avatars" />
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvMeritxell"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:foregroundGravity="center_vertical|center|center_horizontal"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:lines="2"
+            android:text="@string/meritxell_string"
+            android:textColor="@android:color/background_dark"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/ivMeritxell"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal|center_vertical"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:background="@drawable/meri"
-                android:scaleType="centerInside" />
+        <ImageView
+            android:id="@+id/ivLluis"
+            android:layout_width="66dp"
+            android:layout_height="82dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:adjustViewBounds="true"
+            android:background="@drawable/lluis"
+            android:scaleType="centerInside" />
 
-            <ImageView
-                android:id="@+id/ivSuhail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal|center_vertical"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:background="@drawable/suha"
-                android:scaleType="centerInside" />
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvLluis"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_marginTop="10dp"
+            android:foregroundGravity="center_vertical|center|center_horizontal"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:lines="2"
+            android:text="@string/lluis_string"
+            android:textColor="@android:color/background_dark"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-            <ImageView
-                android:id="@+id/ivLluis"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal|center_vertical"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:background="@drawable/lluis"
-                android:scaleType="centerInside" />
+    <LinearLayout
+        android:id="@+id/linearLayout"
 
-            <ImageView
-                android:id="@+id/ivGerard"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal|center_vertical"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:background="@drawable/gerard"
-                android:scaleType="centerInside" />
-        </LinearLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/ivEric"
+            android:layout_width="66dp"
+            android:layout_height="82dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:adjustViewBounds="false"
+            android:background="@drawable/eric"
+            android:scaleType="centerInside" />
+
+        <TextView
+            android:id="@+id/tvEric"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:foregroundGravity="center_vertical|center|center_horizontal"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:lines="2"
+            android:text="@string/eric_string"
+            android:textColor="@android:color/background_dark"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/ivSuhail"
+            android:layout_width="66dp"
+            android:layout_height="82dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:adjustViewBounds="true"
+            android:background="@drawable/suha"
+            android:scaleType="centerInside" />
+
+        <TextView
+            android:id="@+id/tvSuhail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:foregroundGravity="center_vertical|center|center_horizontal"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:lines="2"
+            android:text="@string/suhail_string"
+            android:textColor="@android:color/background_dark"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/ivGerard"
+            android:layout_width="66dp"
+            android:layout_height="82dp"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:adjustViewBounds="true"
+            android:background="@drawable/gerard"
+            android:scaleType="centerInside" />
+
+        <TextView
+            android:id="@+id/tvGerard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_marginTop="10dp"
+            android:foregroundGravity="center_vertical|center|center_horizontal"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:lines="2"
+            android:text="@string/gerard_string"
+            android:textColor="@android:color/background_dark"
+            android:textStyle="bold" />
+
     </LinearLayout>
 
     <TextView
