--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -157,4 +157,13 @@
         android:name="edu.upc.dsa.firefighteradventure.fragments.ProfileGeneralFragment"
         android:label="fragment_profile_general"
         tools:layout="@layout/fragment_profile_general" />
+    <fragment
+        android:id="@+id/configurationFragment"
+        android:name="edu.upc.dsa.firefighteradventure.fragments.ConfigurationFragment"
+        android:label="ConfigurationFragment" />
+    <fragment
+        android:id="@+id/imageViewFragment"
+        android:name="edu.upc.dsa.firefighteradventure.fragments.ImageViewFragment"
+        android:label="fragment_image_view"
+        tools:layout="@layout/fragment_image_view" />
 </navigation>
