--- a/app/src/main/res/layout/fragment_forgotten_password.xml
+++ b/app/src/main/res/layout/fragment_forgotten_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F6DE95"
+    android:background="@color/minim2"
     tools:context=".fragments.ForgottenPasswordFragment">
 
 
@@ -12,7 +12,7 @@
         android:id="@+id/btnBackForgottenPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorAccent"
+        android:backgroundTint="@color/secundarifosc"
         android:text="@string/back_string"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/textbox"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/secundari"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -72,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/textbox"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/secundari"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -114,7 +114,7 @@
         android:id="@+id/btnRecoverPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorPrimaryDark"
+        android:backgroundTint="@color/secundarifosc"
         android:text="@string/recover_password_string"
         android:textSize="15sp"
         android:textStyle="bold"
