--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F6DE95"
+    android:background="#FFB2FF59"
     tools:context=".fragments.SplashScreenFragment">
 
     <ImageView
@@ -22,7 +22,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.43"
-        app:tint="@color/colorPrimaryDark" />
+        app:tint="@color/negre" />
 
     <TextView
         android:id="@+id/tvNoInternet"
