--- a/app/src/main/res/layout/fragment_no_internet_connection.xml
+++ b/app/src/main/res/layout/fragment_no_internet_connection.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F6DE95"
+    android:background="@color/minim2"
     tools:context=".fragments.NoInternetConnectionFragment">
 
     <ImageView
@@ -21,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.22"
-        app:tint="@color/colorAccent" />
+        app:tint="@color/negre" />
 
     <TextView
         android:id="@+id/tvNoInternet"
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:backgroundTint="@color/colorPrimaryDark"
+        android:backgroundTint="@color/secundarifosc"
         android:text="@string/retry_string"
         android:textSize="18sp"
         android:textStyle="bold"
